--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,16 @@
 {
   "name": "iothub-angular",
   "description": "AngularJS module for IoTHuB",
-  "main": "index.js",
+  "main": "angular-iothub.js",
   "authors": [
     "Przemysław Płyś <przemyslaw.plys@gmail.com>"
   ],
-  "license": "ISC",
+  "license": "",
   "keywords": [
     "iot"
   ],
   "homepage": "https://github.com/plysiu/iothub-angular",
-  "moduleType": [
-    "es6"
-  ],
+  "moduleType": [],
   "private": true,
   "ignore": [
     "**/.*",
@@ -20,5 +18,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular-resource": "~1.4.8"
+  }
 }
